# bufsy

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: main.rs
src/app/: encryption.rs  fnt.rs  mod.rs  print.rs
src/cli/: args.rs  commands.rs  init.rs  mod.rs
src/config/: load_config.rs  mod.rs  settings.rs
src/transport/: mod.rs  server.rs
src/transport/axum/: mod.rs  server.rs
src/transport/udp/: mod.rs  server.rs
