[package]
name = "bufsy"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
local-ip-address = "0.6.8"
notify-rust = "4.11.7"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
wl-clipboard-rs = "0.9.3"
aes-gcm = "0.10.3"
tower = "0.5.2"
http-body-util = "0.1.3"
dirs = "6.0.0"
sha2 = "0.10.9"
