[package]
name = "bufsy"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
local-ip-address = "0.6.8"
notify-rust = "4.11.7"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "time",
  "signal"
] }
wl-clipboard-rs = "0.9.3"
aes-gcm = "0.10.3"
tower = "0.5.2"
http-body-util = "0.1.3"
dirs = "6.0.0"
sha2 = "0.10.9"
reqwest =  { version = "0.12.26", default-features = false, features = [
 "rustls-tls",
 "json"
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

[profile.dev]
lto = "off"
opt-level = 1
debug = true
incremental = true
panic = "unwind"

[profile.release]
opt-level = "z"        # минимальный размер (лучше чем "s")
lto = "fat"            # агрессивная оптимизация
codegen-units = 1      # лучше оптимизация, медленнее билд
strip = "symbols"      # убирает символы, но оставляет релокации
panic = "abort"        # быстрее и меньше бинарь
